# saffron-rhythm-duel

./: Cargo.toml  README.md  attributions.txt  contributions.txt  rustc-ice-2024-05-13T04_01_25-53916.txt  rustc-ice-2024-05-29T04_08_48-44647.txt  rustc-ice-2024-05-29T04_10_51-44892.txt  rustc-ice-2024-05-29T04_11_16-44979.txt  rustc-ice-2024-06-02T17_19_59-26677.txt  rustc-ice-2024-06-09T01_39_58-9448.txt  rustc-ice-2024-06-09T01_40_15-9517.txt  rustc-ice-2024-06-09T23_41_18-87648.txt  rustc-ice-2024-06-12T02_38_10-47748.txt
assets/: config.toml
assets/charts/: map1.json  map2.json  poly-rhythm-2-3-5.json  poly-rhythm-2-3.json  poly-rhythm-3-5.json  rand-map-94fc728a47.json  rand-map-e4729b0718.json  rand-map-e542ff4f78.json
assets/shaders/: custom_material_import.wgsl  lane_box_material_2d.wgsl  target_sparkle_material_2d.wgsl
src/: arrow.rs  input.rs  keycode_serde.rs  lane.rs  layout.rs  logging.rs  main.rs  selector_menu.rs  settings.rs  targets.rs  team_markers.rs  ui.rs  user_settings.rs
src/animations/: mod.rs
src/arrow/: arrow.rs  chart.rs  chart_loader.rs  chart_selector.rs  mod.rs  spawner.rs  timer.rs
src/judgement/: animations.rs  combo_meter.rs  feedback.rs  feedback_text.rs  grading.rs  lane_box.rs  lane_widgets.rs  metrics.rs  mod.rs  sound_alerts.rs  target_sparkles.rs
src/layout/: bbox.rs  layers.rs  mod.rs  song_panel.rs  ui_timer.rs
src/record/: controls.rs  mod.rs
src/remote/: communicate.rs  mod.rs  server.rs  translate.rs  widgets.rs
src/shaders/: background.rs  mod.rs  sparkle.rs
src/song/: arrow.rs  chart.rs  mod.rs  spawner.rs
src/widgets/: feedback_text.rs  lane_box.rs  (+4 more)
tools/: make_random_map.py
