[package]
name = "saffron-rhythm-duel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
# dynamic linking for faster build
bevy = { version = "0.13.1", features = ["dynamic_linking", "shader_format_glsl"] }
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.1"
env_logger = "0.11.3"
futures-channel = "0.3.30"
futures-util = "0.3.30"
itertools = "0.13.0"
log = "0.4.21"
ordered-float = "4.2.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
toml = "0.8.12"
tungstenite = "0.21.0"
url = "2.5.0"
warp = "0.3.7"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

